[package]
name = "programming-bitcoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version="0.4" ,features = ["rand"]}
num-traits = "0.2.15"
impl_ops = "0.1.1"
bs58 = "0.4.0"
bitcoin_hashes = "0.11.0"
tokio = "1.20.1"
